@@ -7,6 +7,7 @@
     \item Updated data
     \item Removed \sQuote{Common Queries} vegnette. See references in the \code{get_ga()} help page
     \item Added \code{shiny_dimsmets()} to explore dimensions and metrics for the Core Reporting API
+    \item Removed unused \code{rga.token} option
     \item Some inner code improvements
   }
 }
